StarSpan ChangeLog
$Id$


2008-04-24
    - GRASS interface documentation updated in web site: 
        http://starspan.casil.ucdavis.edu/doku/doku.php?id=grass

    - Rasterization process documented in: 
        http://starspan.casil.ucdavis.edu/doku/doku.php?id=rasterization
      --rasterize option still internal for testing purposes.
      Also added rasterize command to GRASS interface to facilitate this
      testing, although the GDAL GRASS driver cannot create new GRASS rasters;
      using ENVI for output rasters for now.

2008-04-22
    - Implemented grass interface commands:
        report
        csv
        
    - Each command is GRASS-configured individually so it is better dispatched
      in terms of pertinent options. Also, the command can be dispached from
      the GRASS GUI, including selection according to input map: vector or raster.
        
        
      NOTE: starspan_dup_pixel() was segfaulting with versions geos 2.2.3 and
      gdal 1.5.0. Just updated geos to 3.0.0 (on pegasus) and problem fixed. 
            
       
        
2008-04-21
    - New starspan_grass.cc: preliminaries for providing a GRASS interface.
    
2008-04-18
    - New starspan_rasterize.cc: goal: do some basic comparisons with the
      output generated by GRASS' v.to.rast.

2008-04-17
    - Code cleanup:
        - Removed (not used):
            - starspan_csv_dup_pixel.cc
            - starspan_db.cc
            - starspan_tuct1.cc
            - starspan_update_dbf.cc
            - function starspan_myErrorHandler()
        - Improved comments to some sources
        
        - Moved src/rasterizers/agg_*.h to new dir src/rasterizers/agg/
          (agg is used only for line rasterization but other types of
          rasterization may eventually be located in src/rasterizers/.)
    
2008-04-11
    - new IntersectionInfo struct to add more information in intersectionFound() 
      and intersectionEnd() traversal observer interface.
      